# WeChat-TFCC

./: .gitignore  README.md  build.sh
samples/: CMakeLists.txt  ConvertONNXModel.md  ConvertTFModel.md  run_model.cpp
tfcc/: CMakeLists.txt  Doxyfile  LICENSE  README.md
tfcc/cmake/: CheckCompilerFeatures.cmake  Utils.cmake  tfcc-config.cmake.in
tfcc/core/: CMakeLists.txt  tfcc.h  tfcc_allocators.h  tfcc_dataloaders.h  tfcc_exceptions.h  tfcc_framework.h  tfcc_layers.h  tfcc_operations.h  tfcc_rnn.h  tfcc_utils.h
tfcc/core/allocators/: tfcc_allocator.cpp  tfcc_allocator.h  tfcc_flexallocator.cpp  tfcc_flexallocator.h  tfcc_simpleallocator.cpp  tfcc_simpleallocator.h
tfcc/core/dataloaders/: tfcc_dataloader.cpp  tfcc_dataloader.h  tfcc_multidataloader.cpp  tfcc_multidataloader.h  tfcc_npzdataloader.cpp  tfcc_npzdataloader.h
tfcc/core/exceptions/: tfcc_dataformaterror.cpp  tfcc_dataformaterror.h  tfcc_exception.cpp  tfcc_exception.h  tfcc_invalidargumenterror.cpp  tfcc_invalidargumenterror.h  tfcc_invaliddataerror.cpp  tfcc_invaliddataerror.h  tfcc_notimplementederror.cpp  tfcc_notimplementederror.h  tfcc_resourceexhaustederror.cpp  tfcc_resourceexhaustederror.h  tfcc_runtimeerror.cpp  tfcc_runtimeerror.h
tfcc/core/framework/: tfcc_configure.cpp  tfcc_configure.h  tfcc_constant.cpp  tfcc_constant.h  tfcc_constantmanager.cpp  tfcc_constantmanager.h  tfcc_device.cpp  tfcc_device.h  tfcc_scope.cpp  tfcc_scope.h  tfcc_session.cpp  tfcc_session.h  tfcc_shape.h  tfcc_tensor.h  tfcc_types.cpp  tfcc_types.h  tfcc_variable.cpp  tfcc_variable.h  tfcc_view.cpp  tfcc_view.h
tfcc/core/interfaces/: tfcc_activationinterface.cpp  tfcc_activationinterface.h  tfcc_arithmeticinterface.cpp  tfcc_arithmeticinterface.h  tfcc_basicinterface.cpp  tfcc_basicinterface.h  tfcc_batcharithmeticinterface.cpp  tfcc_batcharithmeticinterface.h  tfcc_blasinterface.cpp  tfcc_blasinterface.h  tfcc_cellinterface.cpp  tfcc_cellinterface.h  tfcc_comparisoninterface.cpp  tfcc_comparisoninterface.h  tfcc_convolutioninterface.cpp  tfcc_convolutioninterface.h  tfcc_datainterface.cpp  tfcc_datainterface.h  tfcc_gatherinterface.cpp  tfcc_gatherinterface.h  tfcc_interface.cpp  tfcc_interface.h  tfcc_minmaxinterface.cpp  tfcc_minmaxinterface.h  tfcc_normalizationinterface.cpp  tfcc_normalizationinterface.h  tfcc_quantizationinterface.cpp  tfcc_quantizationinterface.h  tfcc_reduceinterface.cpp  tfcc_reduceinterface.h  tfcc_scatterinterface.cpp  tfcc_scatterinterface.h  tfcc_segmentinterface.cpp  tfcc_segmentinterface.h  tfcc_signalinterface.cpp  tfcc_signalinterface.h  tfcc_transformationinterface.cpp  tfcc_transformationinterface.h
tfcc/core/layers/: tfcc_batchnormalizationlayer.cpp  tfcc_batchnormalizationlayer.h  tfcc_conv1dlayer.cpp  tfcc_conv1dlayer.h  tfcc_conv2dlayer.cpp  tfcc_conv2dlayer.h  tfcc_denselayer.cpp  tfcc_denselayer.h  tfcc_embeddinglookuplayer.cpp  tfcc_embeddinglookuplayer.h  tfcc_layernormalizationlayer.cpp  tfcc_layernormalizationlayer.h
tfcc/core/operations/: tfcc_base.cpp  tfcc_base.h  tfcc_blas.cpp  tfcc_blas.h  tfcc_data.cpp  tfcc_data.h  tfcc_math.cpp  tfcc_math.h  tfcc_nn.cpp  tfcc_nn.h  tfcc_operation.cpp  tfcc_operation.h  tfcc_operator.cpp  tfcc_operator.h  tfcc_quantization.cpp  tfcc_quantization.h  tfcc_random.cpp  tfcc_random.h  tfcc_relation.cpp  tfcc_relation.h  tfcc_rnn.cpp  tfcc_rnn.h  tfcc_signal.cpp  tfcc_signal.h
tfcc/core/rnn/: tfcc_decoder.h  tfcc_decoder.hpp  tfcc_dynamicrnn.cpp  tfcc_dynamicrnn.h  tfcc_dynamicrnn.hpp  tfcc_grucell.cpp  tfcc_grucell.h  tfcc_lstmcell.cpp  tfcc_lstmcell.h  tfcc_multirnncell.h  tfcc_pytorchgrucell.cpp  tfcc_pytorchgrucell.h  tfcc_pytorchlstmcell.cpp  tfcc_pytorchlstmcell.h
tfcc/core/utils/: tfcc_commutils.cpp  tfcc_commutils.h  tfcc_coster.h  tfcc_debugutils.cpp  tfcc_debugutils.h  tfcc_fifoqueue.cpp  tfcc_fifoqueue.h  tfcc_fifoqueue.hpp  tfcc_initializer.cpp  tfcc_initializer.h  tfcc_quantizationutils.h  tfcc_releaseguard.cpp  tfcc_releaseguard.h  tfcc_spinlock.h
tfcc/cuda/: CMakeLists.txt  tfcc_cuda.h
tfcc/cuda/exceptions/: tfcc_cublasruntimeerror.cpp  tfcc_cublasruntimeerror.h  tfcc_cudaruntimeerror.cpp  tfcc_cudaruntimeerror.h  tfcc_cudnnruntimeerror.cpp  tfcc_cudnnruntimeerror.h
tfcc/cuda/framework/: tfcc_cudadevice.cpp  tfcc_cudadevice.h  tfcc_cudadeviceproperty.cpp  tfcc_cudadeviceproperty.h  tfcc_cudasession.cpp  tfcc_cudasession.h  tfcc_cudatypes.h
tfcc/cuda/interfaces/: tfcc_cudaactivationinterface.cu  tfcc_cudaactivationinterface.h  tfcc_cudaarithmeticinterface.cu  tfcc_cudaarithmeticinterface.h  tfcc_cudabasicinterface.cu  tfcc_cudabasicinterface.h  tfcc_cudabatcharithmeticinterface.cu  tfcc_cudabatcharithmeticinterface.h  tfcc_cudablasinterface.cu  tfcc_cudablasinterface.h  tfcc_cudabroadcasthelper.h  tfcc_cudacellinterface.cu  tfcc_cudacellinterface.h  tfcc_cudacomparisoninterface.cu  (+19 more)
tfcc/docs/: getting-start.ch.md  getting-start.md  main-page.ch.md  main-page.md  trans-tf-model.ch.md  trans-tf-model.md
tfcc/mkl/: CMakeLists.txt  tfcc_mkl.h
tfcc/test/: CMakeLists.txt  base.cpp  blas.cpp  data.cpp  environment.cpp  environment.h  fakeloader.cpp  fakeloader.h  framework.cpp  layer.cpp  main.cpp  math.cpp  nn.cpp  operator.cpp  quantization.cpp  reduce.cpp  relation.cpp  rnn.cpp  scope.cpp  signal.cpp  utils.cpp
tfcc/tools/: datatransfer.py
tfcc_runtime/: CMakeLists.txt  main.cpp  test_pb.cpp  tfcc_runtime.h
tfcc_runtime/cmake/: Utils.cmake
tfcc_runtime/exceptions/: runtimeerror.cpp  runtimeerror.h  unknownodeerror.cpp  unknownodeerror.h  unknowsymbolerror.cpp  unknowsymbolerror.h
tfcc_runtime/framework/: graph.cpp  graph.h  model.cpp  model.h  symbolmanager.cpp  symbolmanager.h  types.h
tfcc_runtime/operations/: base.cpp  base.h  fusion.cpp  fusion.h  math.cpp  math.h  nn.cpp  nn.h  operation.cpp  operation.h  random.cpp  random.h  relation.cpp  relation.h  rnn.cpp  rnn.h  signal.cpp  signal.h
tfcc_runtime/proto/: common.proto  data.proto  model.proto
tfcc_runtime/utils/: commutils.cpp  commutils.h  jitutils.cpp  jitutils.h  modeldataguard.cpp  modeldataguard.h  reduceutils.h
(+958 files in other folders)
